--- a/public_html/scss/modules/products.scss
+++ b/public_html/scss/modules/products.scss
@@ -64,9 +64,13 @@ and open the template in the editor.
             border-bottom: 1.5px dashed #999;
 
             @media all and (max-width:959px){
-                width: 60%;
-                left: 20%;
+                width: 80%;
+                left: 10%;
             }
+        }
+        
+        @media all and (max-width:959px){
+            font-size: 160%;
         }
 
     }
